<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="24dp"
    android:background="?attr/colorSurface">

    <!-- Título -->
    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_settings"
        android:textColor="?attr/colorOnSurface"
        android:textSize="40dp"
        android:textStyle="bold"
        android:paddingTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Contenido desplazable -->
    <ScrollView
        android:id="@+id/scrollViewSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle"
        app:layout_constraintBottom_toTopOf="@+id/btnBackSettings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:gravity="center_horizontal">

            <!-- Idioma-->
            <TextView
                android:id="@+id/tvLanguage"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_language"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"/>

            <Spinner
                android:id="@+id/spinnerLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/languages"
                android:spinnerMode="dropdown"
                android:layout_marginTop="8dp"/>

            <!-- Apariencia -->
            <TextView
                android:id="@+id/tvTheme"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_theme"
                android:textStyle="bold"
                android:textColor="?attr/colorOnSurface"
                android:layout_marginTop="24dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dark_mode"
                android:layout_marginTop="8dp"
                android:textColor="?attr/colorOnSurface"/>

        </LinearLayout>
    </ScrollView>

    <!-- Botón Volver -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBackSettings"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:background="@drawable/button_selector"
        android:textColor="?attr/colorOnPrimary"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
