<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="?attr/colorSurface">

    <!-- Logo UPV/EHU -->
    <ImageView
        android:id="@+id/imgUniversityLogo"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:contentDescription="Logo UPV/EHU"
        android:src="@drawable/upv_ehu_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Texto grado -->
    <TextView
        android:id="@+id/tvChooseDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/course"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgUniversityLogo" />

    <!-- Selector de grado -->
    <Spinner
        android:id="@+id/spinnerCarreras"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/alava_carreras"
        android:spinnerMode="dropdown"
        android:dropDownWidth="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tvChooseDegree"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Título sección campus -->
    <TextView
        android:id="@+id/tvCampusTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/campus"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinnerCarreras" />

    <!-- Dirección del campus -->
    <TextView
        android:id="@+id/tvUniversityAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="Comandante Izarduy, 23, 01006 Vitoria-Gasteiz, Álava, España"
        android:textColor="?attr/colorOnSurface"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCampusTitle" />

    <!-- Enlace web -->
    <TextView
        android:id="@+id/tvVisitUniversity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/web"
        android:textColor="?attr/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUniversityAddress" />

    <!-- Botón Volver -->
    <Button
        android:id="@+id/btnVolverUniversity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:background="@drawable/button_selector"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
